<TextField/> - fix wrong position of info icon (#1966)
* <TextField/> - fix wrong position of info icon

* Fix nolabel position of info+required icons

--- a/src/Composite/InputAreaWithLabelComposite/InputAreaWithLabelComposite.scss
+++ b/src/Composite/InputAreaWithLabelComposite/InputAreaWithLabelComposite.scss
@@ -1,11 +1,13 @@
 @import '../../common.scss';
 
 .label {
+	display: flex;
 	margin-bottom: 6px;
 }
 
 .withLabelAttributes {
 	display: flex;
+	align-items: center;
 }
 
 .inputWrapper {
